fixed spacing

--- a/public/style.css
+++ b/public/style.css
@@ -10,7 +10,7 @@
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  width: 20%;
+  width: 25%;
   border: 1px solid black;
   justify-content: center;
   align-content: center;
